🛠️ (tbo-34) add integration for ConfirmRegistration (#44)
* 📝  (tbo-36) add /security/confirm-registration

* 🛠️  (tbo-34) add integration for ConfirmRegistration
