# src/Security/Domain/UseCase/ConfirmRegistration/Handler.php
@@ -6,36 +6,36 @@ namespace App\Security\Domain\UseCase\ConfirmRegistration;
 
 use App\Core\Domain\Application\Repository\PendingOneTimePasswordRepository;
 use App\Core\Domain\Model\Exception\OneTimePasswordException;
-use App\Core\Domain\Model\ValueObject\OneTimePassword;
 use App\Core\Domain\UseCase\Handler as CoreHandler;
 use App\Security\Domain\Application\Repository\UserRepository;
+use App\Security\Domain\Application\Security\LoginProgrammatically;
 use App\Security\Domain\Model\Exception\UserException;
-use App\Security\Domain\Model\ValueObject\Email;
 
 final readonly class Handler implements CoreHandler
 {
     public function __construct(
         private UserRepository $userRepository,
-        private PendingOneTimePasswordRepository $pendingOneTimePasswordRepository
+        private PendingOneTimePasswordRepository $pendingOneTimePasswordRepository,
+        private LoginProgrammatically $loginProgrammatically
     ) {
     }
 
     public function __invoke(Input $input): void
     {
-        $pendingOneTimePassword = $this->pendingOneTimePasswordRepository->findOneByOneTimePassword($input->getOneTimePassword());
+        $pendingOneTimePassword = $this->pendingOneTimePasswordRepository->findOneByOneTimePassword($input->oneTimePassword());
 
         if (null === $pendingOneTimePassword) {
-            throw OneTimePasswordException::oneTimePasswordNotFound($input->getOneTimePassword());
+            throw OneTimePasswordException::oneTimePasswordNotFound($input->oneTimePassword());
         }
 
         if ($pendingOneTimePassword->isExpired()) {
             throw OneTimePasswordException::pendingOneTimePasswordExpires($pendingOneTimePassword);
         }
 
-        $user = $this->userRepository->findOneByEmail($input->getEmail());
+        $user = $this->userRepository->findOneByEmail($input->email());
 
         if (null === $user) {
-            throw UserException::emailNotFound($input->getEmail());
+            throw UserException::emailNotFound($input->email());
         }
 
         if (!$pendingOneTimePassword->getTarget()->isFor($user, $user->getId())) {
@@ -45,5 +45,7 @@ final readonly class Handler implements CoreHandler
         $user->confirm();
 
         $this->pendingOneTimePasswordRepository->remove($pendingOneTimePassword);
+
+        $this->loginProgrammatically->login($user);
     }
 }
